<resources>
    <string name="app_name">Document Face Verification</string>

    <string name="saved_language_key" translatable="false">SAVED_LANGUAGE</string>
    <string name="saved_dark_mode_key" translatable="false">SAVED_DARK_MODE</string>
    <string name="saved_model_key" translatable="false">SAVED_MODEL</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_verify_passport_id_card">Verify</string>
    <string name="label_test_model_accuracy">Model Test</string>
    <string name="label_settings">Settings</string>
    <string name="document_number_text">Document Number</string>
    <string name="birth_date_text">Birth Date</string>
    <string name="expiration_date_text">Expiration Date</string>
    <string name="nfc_verification_required">NFC Verification Required</string>
    <string name="birth_date">Birth Date</string>
    <string name="document_number">Document Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="name_surname">Name</string>
    <string name="birth_date_error">Birth Date Must Be Selected</string>
    <string name="expiration_date_error">Expiration Date Must Be Selected</string>
    <string name="doc_number_error">Document Number Must be 9 Characters</string>
    <string name="select_a_country">Select a country</string>
    <string name="select_document_type">Select Document Type</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="id_card">ID Card</string>
    <string name="passport">Passport</string>
    <string name="bac_key_explanation">A key will be generated from the Document Number, Expiration Date, and Birth Date in order to retrieve data from the NFC Chip contained within the document.</string>
    <string name="bac_key_correct_ensure">Ensure that they are accurate!</string>
    <string name="nfc_read_tip1">Ensure that NFC is enabled.\n</string>
    <string name="nfc_read_tip2">Position the phone on the document and move it in a gentle manner until communication starts.</string>
    <string name="nfc_read_tip3">Examine both the front and rear of the document.</string>
    <string name="face_partially_observed">There was a problem detecting the face. \n\nIt seems like face is partially obscured or at an extreme angle. \n\nPlease put the phone in a position so that your face fully appears inside the camera</string>
    <string name="no_face_detected">No face detected. \n\nPlease adjust your phone in a way that your face fully appears in the camera</string>
    <string name="more_than_one_face_detected">More than one face detected. \n\nThese selfies are meant to be individual. \n\nPlease take the selfie individually</string>
    <string name="model">Model</string>
    <string name="distance">Distane</string>
    <string name="decision_boundary">Decision Boundary</string>
    <string name="output_size">Output Size</string>
    <string name="input_size">Input Size</string>
    <string name="photos_are_matching">Photos Are Matching \n(Click for more info)</string>
    <string name="photos_don_t_match">Photos Don\'t Match \n(Click for more info)</string>
    <string name="done">Done</string>
    <string name="document_nfc_verified">Document NFC Verified</string>
    <string name="do_not_wear_a_mask">Do NOT Wear a Mask</string>
    <string name="you_must_take_your_glasses_off">You Must Take Your Glasses Off</string>
    <string name="do_not_wear_a_hat">Do NOT Wear a Hat</string>
    <string name="next">Next</string>
    <string name="select_language">Select Language</string>
    <string name="select_recognition_model">Select Recognition Model</string>
    <string name="select_theme">Select Theme</string>


    <string name="tp">True Positive Rate</string>
    <string name="tn">True Negative Rate</string>
    <string name="fp">False Positive Rate</string>
    <string name="fn">False Negative Rate</string>
    <string name="scanning">Scanning</string>
    <string name="manual">Manual</string>

</resources>