<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadingAndDisplayingMRZ.View.AddByScanningFragment">

    <TextView
        android:id="@+id/tvDocumentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/document_number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/birth_date_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDocumentID"
        app:layout_constraintEnd_toStartOf="@+id/tvExpirationDate"
        app:layout_constraintStart_toEndOf="@+id/tvDocumentID"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="8dp"
        android:text="@string/expiration_date_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvBirthDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDocumentID" />

</androidx.constraintlayout.widget.ConstraintLayout>