<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/selectOrAddPassportFragment">

    <fragment
        android:id="@+id/selectOrAddPassportFragment"
        android:name="com.example.passportphotocomparisonthesis.ReadingAndDisplayingMRZ.View.SelectOrAddPassportFragment"
        android:label="@string/label_verify_passport_id_card"
        tools:layout="@layout/fragment_select_or_add_passport">
        <action
            android:id="@+id/action_selectOrAddPassportFragment_to_addDocumentFragment"
            app:destination="@id/addDocumentFragment"></action>
        <action
            android:id="@+id/action_selectOrAddPassportFragment_to_userMRZFragment"
            app:destination="@id/userMRZFragment"
            app:popUpTo="@id/selectOrAddPassportFragment"
            app:popUpToInclusive="false" />

    </fragment>
    <fragment
        android:id="@+id/modelTestFragment"
        android:name="com.example.passportphotocomparisonthesis.View.ModelTestFragment"
        android:label="@string/label_test_model_accuracy"
        tools:layout="@layout/fragment_model_test" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.passportphotocomparisonthesis.View.SettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/addDocumentFragment"
        android:name="com.example.passportphotocomparisonthesis.ReadingAndDisplayingMRZ.View.AddDocumentFragment"
        tools:layout="@layout/fragment_add_document">

        <action
            android:id="@+id/action_addDocumentFragment_to_userMRZFragment"
            app:destination="@id/userMRZFragment"
            app:popUpTo="@id/selectOrAddPassportFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/addByScanningFragment"
        android:name="com.example.passportphotocomparisonthesis.ReadingAndDisplayingMRZ.View.AddByScanningFragment"
        tools:layout="@layout/fragment_add_by_scanning">

        <action
            android:id="@+id/action_addByScanningFragment_to_userMRZFragment"
            app:destination="@id/userMRZFragment" />
    </fragment>

    <fragment
        android:id="@+id/userMRZFragment"
        android:name="com.example.passportphotocomparisonthesis.NFCAndChipAuthentication.UserMRZFragment"
        tools:layout="@layout/fragment_user_m_r_z">

        <argument
            android:name="user"
            app:argType="com.example.passportphotocomparisonthesis.ReadingAndDisplayingMRZ.Model.UserBAC" />
        <action
            android:id="@+id/action_userMRZFragment_to_NFCVerificationFragment"
            app:destination="@id/NFCVerificationFragment" />

    </fragment>
    <dialog
        android:id="@+id/NFCVerificationFragment"
        android:name="com.example.passportphotocomparisonthesis.NFCAndChipAuthentication.NFCVerificationFragment"
        android:label="fragment_n_f_c_verification"
        tools:layout="@layout/fragment_n_f_c_verification" >
        <argument
            android:name="documentID"
            app:argType="string" />
        <argument
            android:name="birthDate"
            app:argType="string" />
        <argument
            android:name="expirationDate"
            app:argType="string" />
    </dialog>
</navigation>